# FinStream

./: .gitignore  DEPLOY_INSTRUCTIONS.txt  README.md  deploy_frontend.sh  presentation.md  samconfig.toml  template.yaml
backend/: app.py  database.py  handler.py  main.py  models.py  pyproject.toml  requirements.txt
backend/clients/: broker_a_client.py  broker_b_client.py
backend/domain/: broker.py
backend/etl/: service.py
backend/integrations/: s3.py
backend/mappers/: broker_a.py  broker_b.py  positions.py  registery.py
backend/mock/: broker.py
backend/repositories/: etl.py  position.py
backend/routes/: brokers.py  etl.py  positions.py
backend/schemas/: brokers.py  etl.py  positions.py  response_registry.py
backend/services/: broker_registery.py  brokers.py  etl.py  positions.py
backend/tests/unit/: test_broker_a_mapper.py  test_etl.py
docs/: stage3.md
frontend/: index.html  package-lock.json  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css
frontend/src/components/: ExposureCharts.tsx  MetricCard.tsx  PositionTable.tsx
